@@ -58,4 +58,6 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
